@@ -1,30 +1,13 @@
-man_MANS      =	check-kernel.eclass.5  \
-		cvs.eclass.5  \
-		dispatch-conf.1  \
-		distutils.eclass.5  \
-		ebook.eclass.5  \
+man_MANS      = dispatch-conf.1  \
 		ebuild.1  \
 		ebuild.5  \
 		emerge.1  \
 		env-update.1  \
 		etc-update.1  \
-		eutils.eclass.5  \
-		fixheadtails.eclass.5  \
-		flag-o-matic.eclass.5  \
-		font.eclass.5  \
 		g-cpan.pl.1  \
-		games.eclass.5  \
-		horde.eclass.5  \
-		libtool.eclass.5  \
 		make.conf.5  \
-		perl-module.eclass.5  \
 		portage.5  \
 		quickpkg.1  \
-		repoman.1  \
-		rpm.eclass.5  \
-		ssl-cert.eclass.5  \
-		stardict.eclass.5  \
-		toolchain-funcs.eclass.5  \
-		vim.eclass.5
+		repoman.1
 
 EXTRA_DIST = $(man_MANS)
