@@ -7,6 +7,9 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  28 Dec 2004; Brian Harring <ferringb@gentoo.org> man/Makefile.am:
+  Removed eclass man pages from makefile references.
+
   15 Dec 2004; Marius Mauch <genone@gentoo.org>
   bin/ebuild-default-functions.sh:
   Disabling the warning for GID=portage as it affects most/all packages and
